--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -320,7 +320,7 @@
     "STAKE_FORM_UNSTAKE_INFO": "스테이킹 라운드가 완료되면 36시간 이내에 귀하의 토큰이 스테이킹에서 인출됩니다.",
     "STAKE_BTN_TEXT": "스테이크(지분)",
     "UNSTAKE_BTN_TEXT": "스테이킹 해제",
-    "STAKE_RESULT_BTN_TEXT": "계속하기",
+    "CONTINUE_BTN_TEXT": "계속하기",
     "STAKE_RESULT_STAKE_HEADER": "스테이킹이 진행 중입니다.",
     "STAKE_RESULT_STAKE_TEXT": "몇 분 안에 stEVER가 귀하의 계정에 나타납니다.",
     "STAKE_RESULT_UNSTAKE_HEADER": "스테이킹 해제가 진행 중입니다",
