feat: change seed password (wip)

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -120,10 +120,10 @@
     "ADD_SEED_PANEL_SAVE_HEADER":"Save the seed phrase",
     "IMPORT_SEED_PANEL_HEADER":"Enter seed phrase",
     "IMPORT_SEED_PANEL_CONFIRM_HEADER":"Enter password to confirm adding",
-    "MANAGE_SEED_PANEL_HEADER":"Manage seed phrase",
+    "MANAGE_SEED_PANEL_HEADER":"Seed",
     "MANAGE_SEED_FIELD_NAME_LABEL":"Seed name",
     "MANAGE_SEED_LIST_KEYS_HEADING":"Keys",
-    "MANAGE_SEED_LIST_KEYS_ADD_NEW_LINK_TEXT":"+ Add new",
+    "MANAGE_SEED_LIST_KEYS_ADD_NEW_LINK_TEXT":"Add new",
     "MANAGE_SEED_LIST_KEYS_ONLY_ONE_NOTE":"(only one is available for legacy seed)",
     "EXPORT_SEED_PANEL_HEADER":"Export a seed phrase",
     "CREATE_DERIVED_KEY_PANEL_HEADER":"Add keys",
@@ -433,5 +433,19 @@
     "SEND_MESSAGE_DENS_RECIPIENT_HINT": "You send to an DeNS, make sure its owner has not changed",
     "SEND_MESSAGE_RESULT_HEADER": "The transaction in progress",
     "SEND_MESSAGE_RESULT_TEXT": "You can add this address to contact book to make it easier to send transaction next time",
-    "SEND_MESSAGE_RESULT_ADDED": "Added"
+    "SEND_MESSAGE_RESULT_ADDED": "Added",
+    "CHANGE_NAME_BTN_TEXT": "Change name",
+    "CHANGE_PASSWORD_BTN_TEXT": "Change password",
+    "CHANGE_PASSWORD_PANEL_HEADER": "Change seed password",
+    "CURRENT_PASSWORD_FIELD": "Current password",
+    "NEW_PASSWORD_FIELD": "New password",
+    "REPEAT_NEW_PASSWORD_FIELD": "Repeat new password",
+    "ENTER_PASSWORD_PLACEHOLDER": "Enter the password",
+    "ENTER_NEW_PASSWORD_PLACEHOLDER": "Enter new password",
+    "CURRENT_SEED_HINT": "Current seed",
+    "PWD_MIN_CHARACTERS": "Min. {count} characters",
+    "PWD_WEAK": "Weak",
+    "PWD_MEDIUM": "Medium",
+    "PWD_STRONG": "Strong",
+    "PWD_CHANGE_SUCCESS_NOTIFICATION": "The password has been changed"
 }
