--- a/src/lang/id.json
+++ b/src/lang/id.json
@@ -111,10 +111,9 @@
     "ADD_SEED_PANEL_SAVE_HEADER":"Simpan frasa seed",
     "IMPORT_SEED_PANEL_HEADER":"Masukkan frasa seed",
     "IMPORT_SEED_PANEL_CONFIRM_HEADER":"Masukkan kata sandi untuk mengonfirmasi penambahan",
-    "MANAGE_SEED_PANEL_HEADER":"Kelola frasa seed",
     "MANAGE_SEED_FIELD_NAME_LABEL":"Nama seed",
     "MANAGE_SEED_LIST_KEYS_HEADING":"Kunci",
-    "MANAGE_SEED_LIST_KEYS_ADD_NEW_LINK_TEXT":"+ Tambahkan baru",
+    "MANAGE_SEED_LIST_KEYS_ADD_NEW_LINK_TEXT":"Tambahkan baru",
     "MANAGE_SEED_LIST_KEYS_ONLY_ONE_NOTE":"(hanya satu yang tersedia untuk seed peninggalan)",
     "EXPORT_SEED_PANEL_HEADER":"Ekspor frasa seed",
     "CREATE_DERIVED_KEY_PANEL_HEADER":"Tambahkan kunci",
