--- a/src/lang/ja.json
+++ b/src/lang/ja.json
@@ -119,10 +119,9 @@
     "ADD_SEED_PANEL_SAVE_HEADER":"このシードフレーズを保存",
     "IMPORT_SEED_PANEL_HEADER":"シードフレーズを入力",
     "IMPORT_SEED_PANEL_CONFIRM_HEADER":"追加確認のためにパスワードを入力",
-    "MANAGE_SEED_PANEL_HEADER":"シードフレーズの管理",
     "MANAGE_SEED_FIELD_NAME_LABEL":"シード名",
     "MANAGE_SEED_LIST_KEYS_HEADING":"キー",
-    "MANAGE_SEED_LIST_KEYS_ADD_NEW_LINK_TEXT":"+新規追加",
+    "MANAGE_SEED_LIST_KEYS_ADD_NEW_LINK_TEXT":"新規追加",
     "MANAGE_SEED_LIST_KEYS_ONLY_ONE_NOTE":"（レガシーシードに使用できるのは1つだけです）",
     "EXPORT_SEED_PANEL_HEADER":"シードフレーズのエクスポート",
     "CREATE_DERIVED_KEY_PANEL_HEADER":"キーの追加",
