--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -95,10 +95,9 @@
     "ADD_SEED_PANEL_SAVE_HEADER": "시드키 저장",
     "IMPORT_SEED_PANEL_HEADER": "시드키 입력",
     "IMPORT_SEED_PANEL_CONFIRM_HEADER": "추가 확정을 위한 패스워드 기입",
-    "MANAGE_SEED_PANEL_HEADER": "시드키 관리하기",
     "MANAGE_SEED_FIELD_NAME_LABEL": "시드키 이름",
     "MANAGE_SEED_LIST_KEYS_HEADING": "키",
-    "MANAGE_SEED_LIST_KEYS_ADD_NEW_LINK_TEXT": "+ 추가하기",
+    "MANAGE_SEED_LIST_KEYS_ADD_NEW_LINK_TEXT": "추가하기",
     "MANAGE_SEED_LIST_KEYS_ONLY_ONE_NOTE": "(Legacy 시드키에는 하나만 사용 가능)",
     "EXPORT_SEED_PANEL_HEADER": "시드키 내보내기",
     "CREATE_DERIVED_KEY_PANEL_HEADER": "키 추가하기",
